book/_build/html/reports/4-data-wrangling.log
Traceback (most recent call last):
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/nbclient/client.py", line 1077, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python/3.7.2_2/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/base_events.py", line 584, in run_until_complete
    return future.result()
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/nbclient/client.py", line 527, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/nbclient/client.py", line 822, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/nataliethurlby/phd/jupyter_books_etc/jekyll-version/phenotype_from_genotype/venv/lib/python3.7/site-packages/nbclient/client.py", line 730, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
{numref}`combining-funnel-plot` shows a funnel plot, showing how the FANTOM5 data was processed to select the final genes and samples present in the combined dataset. 

**Page References**

```{bibliography} /_bibliography/references.bib
:filter: docname in docnames
:style: unsrt
------------------

[0;36m  File [0;32m"<ipython-input-3-bf6a98bfa75e>"[0;36m, line [0;32m1[0m
[0;31m    {numref}`combining-funnel-plot` shows a funnel plot, showing how the FANTOM5 data was processed to select the final genes and samples present in the combined dataset.[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-3-bf6a98bfa75e>, line 1)

